*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -18,15 +18,15 @@
 |pushpin_map            =Ethiopia
 |pushpin_label_position =Top
 |pushpin_mapsize        =
-|pushpin_map_caption    =Location in Itoobiya/Soomaaliya
+|pushpin_map_caption    =Location in Itoobiya
 |coordinates_display    =4°57'19"N   45°1'9"E
 |subdivision_type       =Dalka
-|subdivision_name       =[[Itoobiya/Soomaaliya]]
+|subdivision_name       =[[Itoobiya]]
 |subdivision_type1      =Gobolka
-|subdivision_name1      =[[Shabeele]] Iyo [[Hiiraan]]
+|subdivision_name1      =[[Shabeele]]
 |subdivision_type2      =Feer-feer
 |subdivision_name2      =
-|government_footnotes   =
+|government_footnotes   =Dawladda Deegaanka Soomaalida
 |government_type        =[[Federal]]
 |leader_title           =
 |leader_name            = 
