*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -68,61 +68,63 @@ Gal-cusbo oo ah xarun qadiimi ah laguna yaqaano [[Barashada kumbuyuutarada|Baras
 
 Dhulka baaxadda leh ee ay Abaaleey ku fadhiso iyo qeybaha ay ka koobantahay amaba meelaha hoos yimaada ee ku xeeran waxaa kamid ah:-
 
-•Burdhiinle.
+'''''<u>•Burdhiinle.</u>'''''
 
-•Taagga.
+'''''<u>•Taagga.</u>'''''
 
-•Bardaalle.
+'''''<u>•Bardaalle.</u>'''''
 
-•Xaaji Diini.
+'''''<u>•Xaaji Diini.</u>'''''
 
-.Dareerto.
+'''''<u>.Dareerto.</u>'''''
 
-•Jiic.
+'''''<u>•Jiic.</u>'''''
 
-•Asharaaf.
+'''''<u>•Asharaaf.</u>'''''
 
-•Dhuumoodle.
+'''''<u>•Dhuumoodle.</u>'''''
 
-•Jiiqda Abkay Cumar.
+'''''<u>•Jiiqda Abkay Cumar.</u>'''''
 
-•Baarka Sooguday.
+'''''<u>•Baarka Sooguday.</u>'''''
 
-•Ceel Xaar.
+'''''<u>•Ceel Xaar.</u>'''''
 
-•Libaaxyaale•
+'''''<u>•Libaaxyaale•</u>'''''
 
-•Lo’-Daaq.
+'''''<u>•Lo’-Daaq.</u>'''''
 
-•Jabcadd.
+'''''<u>•Jabcadd.</u>'''''
 
-•Dhagran•
+'''''<u>•Dhagran•</u>'''''
 
-•Dheenle.
+'''''<u>•Dheenle.</u>'''''
 
-•Janno-Adduun.
+'''''<u>•Janno-Adduun.</u>'''''
 
-•Jilba-dheer:
+'''''<u>•Jilba-dheer.</u>'''''
 
-•Ceeblo-Kuuseey.
+'''''<u>•Afyaraado.</u>'''''
 
-•Xanloow.
+'''''<u>•Ceeblo-Kuuseey.</u>'''''
 
-•Mandharuug.
+'''''<u>•Xanloow.</u>'''''
 
-•Allan.
+'''''<u>•Mandharuug.</u>'''''
 
-•Kulanta.
+'''''<u>•Allan.</u>'''''
 
-•Af-dameer.
+'''''<u>•Kulanta.</u>'''''
 
-•Dhir iyo Daaq.
+'''''<u>•Af-dameer.</u>'''''
 
-•Xero-Amxaaro.
+'''''<u>•Dhir iyo Daaq.</u>'''''
 
-•Iskaashatada.
+'''''<u>•Xero-Amxaaro.</u>'''''
 
-•Garbaale iyo Qaar kale oo badan.
+'''''<u>•Iskaashatada.</u>'''''
+
+'''''<u>•Garbaale iyo Qaar kale oo badan</u>'''''.
 
 [[Wabiga Shabeelle|<br>]]{{Gumud}}
 {{Degmooyinka Gobolka Hiiraan}}
