--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,6 +1,6 @@
 (Begedi Clansman) [[File:Begedi Clansman.jpg | thumb | 220x124px | right]]
 
-Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab) wa beel hoosaad kamid ah beelwaynta Aw Digil  , Begedi wuxuu uqaybsamaa :
+Beesha '''Begedi''' / Bagadi Sido kale loogu waco (Mucajab)  kamid ah beelwaynta Raxaweyn Aw Digil  , Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
 
