--- a/Cal_Miskaad.mw
+++ b/Cal_Miskaad.mw
@@ -1,4 +1,5 @@
-'''Cal Miskaad''' sidoo kale loo qoro Buuraleyda Cal Miskaad, waa silsilad buuraley ah oo ka tirsan silsilada buuraha [[Golis]]. Waxaa ku yaala buurta Baxaya oo ah buurta ugu dheer gobolka [[Bari]] ee dalka [[Soomaaliya]]. 
+'''Cal Miskaad''' sidoo kale loo qoro Buuraleyda Cal Miskaad, waa silsilad buuraley ah oo ka tirsan silsilada buuraha [[Golis]]. Waxaa ku yaala buurta Baxaya oo ah buurta ugu dheer gobolka [[Bari]] ee dalka [[Soomaaliya]], iyo buuraha habeeno, marmar iyo buurta buurta buur-badeed.
+
 ==External Links==
 *https://radiokulmiye.net/2020/05/15/al-shabaab-oo-weerar-ku-qaaday-gobolka-bari/
 * https://mapcarta.com/12453418
