--- a/Cal_Miskaad.mw
+++ b/Cal_Miskaad.mw
@@ -3,3 +3,5 @@
 ==External Links==
 *https://radiokulmiye.net/2020/05/15/al-shabaab-oo-weerar-ku-qaaday-gobolka-bari/
 * https://mapcarta.com/12453418
+
+[[Category:Buuraha Soomaaliya]]
