*Empty MediaWiki Message*

--- a/Template:Maqaalo_Soomaaliya.mw
+++ b/Template:Maqaalo_Soomaaliya.mw
@@ -48,6 +48,7 @@
 * [[:Category:Buuraha Soomaaliya|Buuraleeyda]]
 ** [[Buuraha Golis]]
 ** [[Cal Madow]]
+** [[Cal Miskaad]]
 ** [[Buuraha Oogo]]
 * [[:Category:Buuraha Soomaaliya|Buuraha]]
 ** [[Shimbiris]]
