*Empty MediaWiki Message*

--- a/Saqiiro.mw
+++ b/Saqiiro.mw
@@ -1,2 +1,2 @@
-'''Saqiiro''' waa [[deegaan]] ku yaalo [[Mudug|Gobolka Mudug]] ee bartamaha Soomaaliya.
+'''Saqiiro''' waa [[deegaan]] ku yaala  [[Mudug|Gobolka Mudug]] ee bartamaha Soomaaliya.
 {{Magaalooyinka Gobolka Mudug}}
