*Empty MediaWiki Message*

--- a/Siciid_Gacamay.mw
+++ b/Siciid_Gacamay.mw
@@ -1,4 +1,4 @@
-Abwaan '''Siciid Jaamac faarax'''  oo ku magac dheeraa (Abwaan gaacamey) waa abwaan kamid ahaa abwaanada ugu waaweyn abwaanada goballada dhexe gaar ahaaan [[Mudug]], [[Galguduud|Galgaduud]] iyo [[Hiiraan]], abwaan gacaneey ayaa ahaa abwaan hal abuur badan waxaana la sheegaa inuu aad u luuq macaanaa, abwaanka ayaa lahaa gabayo badan oo soomaalida caan ka ahaa,  kuwaasoo uu kaga hadli jiray ifafaalihii waagaas jiray isagoo dadka hogatsaalayn jiray abwaanka ayaa caan ku ahaa gabay uu kula hadlay walaalaha woqooyiga waagii ay halgankooda gooni isu taaga ah bileebeen 1988, was kii lahaa:
+Abwaan '''Siciid Maxamuud Siyaad xeydhe Baraale'''  oo ku magac dheeraa (Abwaan gaacamey) waa abwaan kamid ahaa abwaanada ugu waaweyn abwaanada goballada dhexe gaar ahaaan [[Mudug,Galgaduud iyo Hiiraan]], abwaan gacaneey ayaa ahaa abwaan hal abuur badan waxaana la sheegaa inuu aad u luuq macaanaa, abwaanka ayaa lahaa gabayo badan oo soomaalida caan ka ahaa,  kuwaasoo uu kaga hadli jiray ifafaalihii waagaas jiray isagoo dadka hogatsaalayn jiray abwaanka ayaa caan ku ahaa gabay uu kula hadlay walaalaha woqooyiga waagii ay halgankooda gooni isu taaga ah bileebeen 1988, was kii lahaa:
 * ''<code>Waxba yaan, siyaasada guracan, sookac lay orane</code>''
 * ''<code>Hadii aad sasabo noo wade, surinka noo jiiftay</code>''
 * ''<code>Surka qabo hasiidayn hadaad, xarig u soo haysay</code>''
