*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_10_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_10_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore||'''[[Louvre]]''' waa matxaf ku yaal dalka [[Faransiiska]].}}
+{{Sawirka Bogga Hore|Red-billed_streamertail_(Trochilus_polytmus)_female_in_flight_2.JPG|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
