*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_11_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_11_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Bur.jpg|'''[[Burjiko]]''' ama [[Idan]] waa wax [[Dhuxul]] lagu shubo ama dab.}}
+{{Sawirka Bogga Hore|Yellow-billed_oxpeckers_(Buphagus_africanus_africanus)_on_zebra.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
