*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_12_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_12_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|MonaLisa sfumato.jpeg|'''[[Mona Lisa]]'''.}}
+{{Sawirka Bogga Hore|Cistothorus_palustris_CT.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
