*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_13_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_13_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|KingsCollegeChapelWest.jpg|'''[[Jaamacadda Cambridge]]'''.}}
+{{Sawirka Bogga Hore|Hypothymis_azurea_-_Kaeng_Krachan.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
