*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_14_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_14_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Boyad.jpg|'''[[Booyad|Dab-damis]]'''.}}
+{{Sawirka Bogga Hore|Dungeness_crab_face_closeup.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
