*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_15_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_15_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Mogadishu_International_Airport.jpg|'''[[Garoonka Diyaaradaha ee Aadan Cadde]]''' Burji.}}
+{{Sawirka Bogga Hore|Dynastes_hercules_ecuatorianus_MHNT.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]
