*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_16_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_16_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore||'''[[Hargaysa|Isbitaalka Hooyada iyo Dhalaanka ee Adna Aadan]]''' .}}
+{{Sawirka Bogga Hore|Sarcophagid_fly_Portrait.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
