*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_17_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_17_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Mogadishu city centre - 1960s.jpg|'''[[Muqdisho|Masjidka arbaca rukun]]''' .}}
+{{Sawirka Bogga Hore|Cynictis_penicillata_(Etosha,_2011).jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
