*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_18_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_18_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Horses3.jpg|'''[[Sanaag|Nuuc ka mid ah fardaha soomaalida oo jooga Dahar]]''' .}}
+{{Sawirka Bogga Hore|Eastern_grey_kangaroo_dec07_02.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
