*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_19_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_19_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Bosasairp.jpg|'''[[Bosaso|Garoonka diyaaradaha boosaaso]]''' .}}
+{{Sawirka Bogga Hore|Marine-Iguana-Espanola.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
