*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_2_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_2_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|TheCheethcat.jpg|'''[[Haramcad]]''' waa mid ka mid ah habar dugaag wuxuuna shaabahaa ama u egyahay [[Shabeel]]ka}}
+{{Sawirka Bogga Hore|AgamaSinaita01_ST_10_edit.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
