*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_20_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_20_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Hargeysa memorial.jpg|'''[[Hargaysa|astaan la sheegay in ay tahay maalinta xoriyedda Somaliland]]''' .}}
+{{Sawirka Bogga Hore|Grevillea_rosmarinifolia.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
