*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_21_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_21_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Laf dhabar.png|'''[[Lafdhabar]]''' .}}
+{{Sawirka Bogga Hore|Sprekelia_formosissima_1.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
