*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_22_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_22_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Rolling-thunder-cloud.jpg|'''[[Hawo]]''' .}}
+{{Sawirka Bogga Hore|Clavulinopsis_sulcata_-_Lane_Cove_River.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
