*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_23_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_23_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|ASRock K7VT4A Pro Mainboard.jpg|'''[[Linux|Waa maskaxda Computer-ka]]''' .}}
+{{Sawirka Bogga Hore|Clavaria_zollingeri_90973.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
