*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_24_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_24_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Human jawbone left.jpg|'''[[Daan]]''' .}}
+{{Sawirka Bogga Hore|Stinkhorn_Springbrook.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
