*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_25_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_25_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Tomahawk_Block_IV_cruise_missile.jpg|'''[[Tomahok (gantaal)]]''' .}}
+{{Sawirka Bogga Hore|Lycoperdon_umbrinum.JPG|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
