*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_26_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_26_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Nine Men's Morris board with coordinates.svg|'''[[Shax]]''' .}}
+{{Sawirka Bogga Hore|Rosy_ermine_moth_(Trosia_nigropunctigera).jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
