*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_27_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_27_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|MuseeOrsay_20070324.jpg|'''[[Musée d'Orsay]]''' .}}
+{{Sawirka Bogga Hore|Persicaria_capitata_AF_crop.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
