*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_28_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_28_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|2006-01-28 Drop-impact.jpg|'''[[Dareere]]''' .}}
+{{Sawirka Bogga Hore|2006-01-28 Drop-impact.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
