*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_29_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_29_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Orb weaver black bckgrnd03 crop.jpg|'''[[Caarcaaro]]''' .}}
+{{Sawirka Bogga Hore|Sunflower_macro_wide.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
