*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_30_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_30_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Presidentialres.jpg|'''[[Garoowe]]''' .}}
+{{Sawirka Bogga Hore|Aquilegia_columbine_magpie_cultivar_2.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
