*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_31_Luuliyo.mw
+++ b/Template:Sawirka_Maanta_31_Luuliyo.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Mosquito 2007-2.jpg|'''[[Kaneeco]]''' .}}
+{{Sawirka Bogga Hore|Mosquito 2007-2.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Luuliyo]]</noinclude>
