*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_1_Agoosto.mw
+++ b/Template:Sawirka_Maanta_1_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Volcano scheme.svg|'''[[Fulkaano]]''' .}}
+{{Sawirka Bogga Hore|Nodding_Pincushion_Protea_Flower_Bud.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
