*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_2_Agoosto.mw
+++ b/Template:Sawirka_Maanta_2_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Ethiopan Birr.jpg|'''[[Birr]]''' .}}
+{{Sawirka Bogga Hore|Cleistocactus_strausii2.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
