*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_3_Agoosto.mw
+++ b/Template:Sawirka_Maanta_3_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Amoud logo.jpeg|'''[[Jaamacadda Camuud]]''' .}}
+{{Sawirka Bogga Hore|Inspiration_Point_Bryce_Canyon_November_2018_panorama.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
