*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_4_Agoosto.mw
+++ b/Template:Sawirka_Maanta_4_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Flower poster 2.jpg|'''[[Ubax|Ubax ama fiyoore]]''' .}}
+{{Sawirka Bogga Hore|Hope_Bay-2016-Trinity_Peninsula–Arena_Glacier_03.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
