*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_6_Agoosto.mw
+++ b/Template:Sawirka_Maanta_6_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|HulaguWithHisChristianWifeDoquzKhatun.jpg|'''[[Huulaaku Khan]]''' .}}
+{{Sawirka Bogga Hore|Dordogne_2.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
