*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_8_Agoosto.mw
+++ b/Template:Sawirka_Maanta_8_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|European Wildcat Nationalpark Bayerischer Wald 03.jpg|'''[[Shambay]]''' .}}
+{{Sawirka Bogga Hore|Lijiang_Yunnan_China-Naxi-people-carrying-baskets-01.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
