*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_9_Agoosto.mw
+++ b/Template:Sawirka_Maanta_9_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Aaclashcymbals.jpg|'''[[Shanbal]]''' .}}
+{{Sawirka Bogga Hore|Crater_Lake_winter_pano2.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
