*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_10_Agoosto.mw
+++ b/Template:Sawirka_Maanta_10_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Khat 01.jpg|'''[[Jaad|Ruux qayilaad isku diyaarinaya]]''' .}}
+{{Sawirka Bogga Hore|Lava_Lake_Nyiragongo_2.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
