*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_11_Agoosto.mw
+++ b/Template:Sawirka_Maanta_11_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Laasqoray over view.jpg|'''[[Laasqoray]]''' .}}
+{{Sawirka Bogga Hore|Beachy_Head_and_Lighthouse,_East_Sussex,_England_-_April_2010_crop_horizon_corrected.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
