*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_12_Agoosto.mw
+++ b/Template:Sawirka_Maanta_12_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Buchenwald Corpses 60623.jpg|'''[[Holokost]]''' .}}
+{{Sawirka Bogga Hore|Dead_Vlei_4.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
