*Empty MediaWiki Message*

--- a/Template:Sawirka_Maanta_13_Agoosto.mw
+++ b/Template:Sawirka_Maanta_13_Agoosto.mw
@@ -1,2 +1,2 @@
-{{Sawirka Bogga Hore|Schiphol-plaza-ns.jpg|'''[[Schiphol]]''' .}}
+{{Sawirka Bogga Hore|Peyto_Lake-Banff_NP-Canada.jpg|}}
 <noinclude>[[Category:Sawirka Maanta Agoosto]]</noinclude>
