*Empty MediaWiki Message*

--- a/Maxamed_Xaashi.mw
+++ b/Maxamed_Xaashi.mw
@@ -7,7 +7,7 @@
 | term_end      = 8 January 2005
 | predecessor   = [[Cabdullaahi Yuusuf Axmed]]
 | successor     = [[Maxamuud Muuse Xirsi Cadde]]  
-| birth_date    = 1950s
+| birth_date    = 
 | birth_place   = boholaha xargagan
 | party         = 
 | religion      = [[Islaam]]
