*Empty MediaWiki Message*

--- a/Murcanyo.mw
+++ b/Murcanyo.mw
@@ -7,27 +7,7 @@
 Murcanyo waa magaalo xeebeed ka tirsan degaanka [[Caluula]], [[boosaaso]] waxay u jirta 79 mayl (127km), waa magaalo qadiimi ah.
 Sannadkii 1872 waxaa magaalada degenaa dad lagu qiyaasaayay 600-700 oo qof. Magaalada waxaa xilligaa xukumi jiray [[Suldaanada Majeerteen]]. Magaalada Waxay lahayd afar masaajid. Murcanyo waa tuulo si xawli u kortay, waxaana ku badan qabiilka Ideris Muuse.
 
-Magaalada waxaa la asaasay qiyaastii [[1780[[ -[[1790]]  waxaa tiirkii ugu horeeyay ka taagay [[Faatax Faahiye]]  oo ahaa nin u dhashay Beesha Yuusuf Suldaan, Cismaan Maxamuud.
-
-Markii ugu horaysay magaaladda waxa uu ka qoday ceelka-caanka ah ee [[Tiyeega]], isaga sidoo kalena xaliyay khilaaf ka jiray dhanka Xijiyadda waxa uuna xad u sameeyay xijiyada ku yaalay buuraha sare  ee Murcanyood. 
-
-Faatax Faahiye marna kama mid aheyn xiriirna lama laheyn [[Boqortooyada Bahdir|Boqortooyadii Bahdir]] ee Baargaal degeneed.
-
-Faatax Faahiye waxa uu mudo ku soo noolaa magaalada [[Harar]], waxa uu ka bilaabay deegaanka [[Tayeega]] ceelkii u horeeyay oo qodaal ah waana ku guulaystay in uu helo biyo macaan badan oo ah asaaskii iyo saldhigii ugu horeeyay oo ay noqoto degaan.
-
-Waxay noqotay magaalo ganacsi waxaa usoo guuray dad badan gaar ahaan beesha Yuusuf Suldaan. 
-
-Murcanyo tartiib tartiib ayay usoo waynaatay waxaa bilaamay safaro ka imanaya carabta [[doon|doonleyda]] reer [[yemen|Yamaneed]] ah oo badeecado keensanaayaan Murcanyo.
-
-Faatax Faahiye waxa uu sameeyay maamulka dekada magaalada Murcanyo. Waxaa dhulka Soomaaliya yimi  kaaliyihii  xaga siyaasada wakiilka uga ahaa Cadan  ninkaasu waxa uu yimi Murcanyo, Xiligaas waxay ka koobnayd 85 guri.
-
-Taariikhda marka ee eheed  [[1810]] markii oo geeriyooday Halgamaa Faatax Faahiye, waxaa xukunka boqortooyada gacanta ku dhigay wiilkiisii Cabdi Faatax Faahiye waxayna magaalada noqotay magaalo weyn.
-
-Murcanyo waxa ee yeelatay meelo fardaha caws loogu beero  qayb kamid ah neh tababar lagu qaato,  xiliyadaas waxaa bilaamayay colaado sokeeye oo Soomaliya ka jiray
-
-Markii lasoo gaaray dhamaadkii qarnigii 19 aad iyo bilawgii  kii 20 aad waxay Murcanyo ahayd dhulkii ugu fiicnaa xaga dhaqaalaha  degenaanta iyo magac ahaanba  dhulkii [[majeerteenya]] la oran jiray.
-
-Markii uu bilaamay halgankii [[Sayid Maxamed Cabdulle  Xasan]] waxay ahayd meelahii uu ku xusay geeraaradiisa midkood.
+Magaalada waxaa la asaasay qiyaastii [[1780[[ -[[1790]]  waxaa tiirkii ugu horeeyay ka taagay [[نون عثمان حامد]]  oo ahaa nin u dhashay beesha wadalmogge 
 
 ==Maamulka== 
 Bishii [[Abriil]] 8, [[2013]], dawladda Puntland waxay ku dhawaaqday abuuritaanka iskaashi goboleed cusub oo lala yeelanayo magaalada Murcanyo iyo [[Raas Caseyr]], iskaashi goboleedkaas oo loo magacaabay [[Gees Gardafuul]], waxayna ka kooban tahay 4 degmo. [[Cabdiraxmaan muuse cumar]] ayaa dowlad goboleedka u magacaawday in uu noqdo duqa degmada murcanyo, wuxuuna abuuray golaha degmada. Waxaa jira 9 tuulo hoostaga degmada murcanyo oo kala ah: 
