*Empty MediaWiki Message*

--- a/Cal_Miskaad.mw
+++ b/Cal_Miskaad.mw
@@ -3,6 +3,8 @@
 ==External Links==
 *https://radiokulmiye.net/2020/05/15/al-shabaab-oo-weerar-ku-qaaday-gobolka-bari/
 * https://mapcarta.com/12453418
+==Tixraac==
+https://www.britannica.com/place/Galgodon-Highlands
 
 [[Category:Buuraha Soomaaliya]]
 [[Category:Juqraafiga Soomaaliya]]
