--- a/Cal_Miskaad.mw
+++ b/Cal_Miskaad.mw
@@ -4,167 +4,7 @@
 *https://radiokulmiye.net/2020/05/15/al-shabaab-oo-weerar-ku-qaaday-gobolka-bari/
 * https://mapcarta.com/12453418
 ==Tixraac==
-https://www.britannica.com/place/Galgodon-Highlands
 
-[[Category:Buuraha Soomaaliya]]
-[[Category:Juqraafiga Soomaaliya]]
-[[Category:Buuraha]]
-[[Category: Bari]]
-{{Navbox
-| name = Maqaalo Soomaaliya
-| state = {{{state|autocollapse}}}
-| bodyclass = hlist
-| title = {{flagcountry|Soomaaliya}}
-
-| group1 = [[Taariikhda Soomaaliya|Taariikh]]
-| list1 =
- {{Navbox subgroup
-  | group1 = Dhacdooyin
-  | list1 =
-* [[Laas Geel]]
-* [[Punt|Dhulka Punt]]
-* [[Boqortooyadii Walashma]]
-* [[Saldanadii Warsangali]]
-* [[Saldanadii Cadal]]
-* [[Saldanadii Ajuuraan|Boqortooyadii Ajuuran]]
-* [[Saldanada Geledi]]
-* [[Saldanadii Majeerteen]]
-* [[Saldanadii Hobyo]]
-* [[Dowladii Daraawiishta]]
-* [[Italian Somaliland]]
-* [[British Somaliland]]
-* [[Dhulka Ilaalada Somaliland]]
-* [[Maalinta Madaxbanaanida Soomaaliya|Qaadashadii Madaxbanaanida]]
-* [[Dagaalkii xoraynta ogaden|Dagaalkii Ogadeniya]]
-* [[Mucaaradkii Soomaaliya|Wakhtigii Mucaaradka {{small|(1986&ndash;1992)}}]]
-* [[Budhcad badeeda geeska afrika|Budhcad-badeedka Soomaaliya]]
-* [[Dagaalkii sokeeye ee Soomaaliya|Dagaalkii Sokeeye]]
-  | group2 = {{longitem|Ciwaano kale}}
-  | list2 =
-* [[Taariikhda Badmareenka Soomaalida|Badmareenka Soomaalida]]
-* [[Taariikhda Ciidanka Soomaaliya|Ciidanka Xoogga]]
- }}
-
-| group2 = [[Juqraafiga Soomaaliya|Juqraafiga]]
-| list2 =
-* [[Warbixin Soomaaliya]]
-* [[Liiska magaalooyinka Soomaaliya|Magaalooyinka]]
-* [[Cimilada Soomaaliya#Cimilada|Cimilada]]
-* [[Duurjoogta Soomaaliya|Duurjoogta]]
-* [[Soomaaliweyn]]
-* [[Raas Caseyr]]
-* [[Xaafuun]]
-* [[:Category:Biyoshub Soomaaliya|Biyoshub]]
-** [[Iskushuban]]
-** [[Lamadaya]]
-* [[:Category:Buuraha Soomaaliya|Buuraleeyda]]
-** [[Buuraha Golis]]
-** [[Cal Madow]]
-** [[Cal Miskaad]]
-** [[Buuraha Oogo]]
-* [[:Category:Buuraha Soomaaliya|Buuraha]]
-** [[Shimbiris]]
-** [[Buurta Baxaya]]
-** [[Dul Madooba]]
-*[[:Category:Gasiiradaha Soomaaliya|Gasiirado]]
-**[[Gasiirada Saacadiin]]
-**[[Jasiiradaha Jubbada Hoose]]
- {{Navbox subgroup
-  | group1 = [[Gobolada Soomaaliya]]
-  | list1 =
-* [[Awdal]] 
-* [[Bakool]]
-* [[Banaadir]]
-* [[Bari (Gobol)|Bari]]
-* [[Baay]]
-* [[Galguduud]]
-* [[Gedo]]
-* [[Hiiraan]]
-* [[Jubbada Dhexe]]
-* [[Jubbada Hoose]]
-* [[Mudug]]
-* [[Nugaal]]
-* [[Sanaag]]
-* [[Shabeellaha Hoose]]
-* [[Shabeellaha Hoose]]
-* [[Sool]]
-* [[Togdheer]]
-* [[Woqooyi Galbeed]]
-}}
-| group3 = [[Siyaasadda Soomaaliya|Siyaasadda]]
-| list3 =
-* [[Golaha wasiirada]]
-* [[Dastuurka Soomaaliya|Dastuurka]]
-* [[Doorashooyinka Soomaaliya|Doorashooyinka]]
-* [[Xiriirka Arrimaha Dibadda Soomaaliya|Xidhiidhka Arimaha Dibada]]
-* [[Dawladda federaalka Soomaaliya|Dawladda Federaalka]]
-* [[Xuquuqda Dadka Soomaaliya|Xuquuqda Insaanka]]
-* [[Garsoorka Soomaaliya|Garsoorka]]
-* [[Xeer|Xeerka]]
-* [[Ciidanka Soomaaliya|Ciidanka Xoogga]]
-* [[Baarlamaanka Federaalka Soomaaliya|Baarlamaanka]]
-* [[Liiska Xisbiyada Siyaasadda Soomaaliya|Xisbiyada Siyaasadda]]
-* [[Madaxwaynaha Soomaaliya|Madaxwayne]]
-** [[Madaxweyneyaashii Soomaaliya|Dhammaantood]]
-* [[Ra'iisul wasaarayaashii Soomaaliya]]
-** [[Ra'iisul wasaarayaashii Soomaaliya|Dhammaantood]]
-{{Navbox subgroup
-  | group1 = [[Maamulgoboleedka Soomaaliya|Maamul Goboleedyada Soomaaliya]]
-  | list1 =
-*{{Flag|Awdalland}}
-*{{Flag|Galmudug}}
-*{{Flag|Jubaland}}
-*{{Flag|Khatumo}}
-*{{Flagicon image|Flag maakhir.png}} [[Maakhir]] 
-*{{Flag|Puntland}}
-*{{Flag|Somaliland}}
-  }}
-| group4 = [[Dhaqaallaha Soomaaliya|Dhaqaalaha]]
-| list4 =
-* [[Beeraha Soomaaliya|Dallagga]]
-* [[Bankiga Dhexe ee Soomaaliya|Bankiga Dhexe]]
-* [[Liiska Shirkadaha Soomaaliya|Shirkadaha]]
-* [[Taariikhda Dhaqaalaha Soomaaliya|Taariikhda Dhaqaalaha]]
-* [[Aagga Dhaqaalaha Soomaaliya|Aagga Dhaqaalaha]]
-* [[Wershadaha Macdanta Soomaaliya|Wershadaha Macdanta]]
-* [[Kheyraadka Shidaalka Puntland|Wershaha Shidaalka]]
-* [[Somali shilling|Shilling {{small|(lacag)}}]]
-* [[Isgaadhsiinta Soomaaliya|Isgaadhsiinta]]
-* [[Dalxiiska Soomaaliya|Dalxiiska]]
-* [[Socdaalka Soomaaliya|Socdaalka]]
-
-| group5 = [[Dadka Soomaalida|Bulshada]]
-| list5 =
-* [[Qolobaa Calankeed|Heesta Calanka]]
-* [[Astaanta Qaranka ee Soomaaliya|Astaanta Qaranka]]
-* [[Bulshada Soomaaliya|Shacabka]]
-* [[Qurbajoogta Soomaaliyeed|Qurbajoogta]]
-* [[Waxbarashada Soomaaliyeed|Waxbarashada ]]
-* [[Calanka Soomaaliya|Calanka]]
-* [[Wakhtiga fasaxa Soomaaliya|Wakhtiga fasaxa]]
-{{Navbox subgroup
-  | group1 = [[Dhaqanka Soomaaliya|Dhaqanka]]
-  | list1 =
-* [[Dhisme Soomaali|Dhismaha]]
-* [[Farshaxan Soomaali|Farshaxan]]
-* [[Shaleemada Soomaaliya|Shaleemada]]
-* [[Cunto Soomaali|Cuntada]]
-* [[Suugaanta Soomaalida|Suugaanta]]
-* [[Warbaahinta Soomaaliya|Warbaahinta]]
-* [[Fanka Soomaalida|Muusiga iyo Fanka]]
-* [[Diinta Soomaalida|Diinta]]
-* [[Ciyaarta Soomaalida|Ciyaaraha]]
-* [[Luuqadaha Soomaaliya|Luuqadaha]]
-}}
-| group6 = 
-| list6 =
-* {{icon|Book}} [[Book:Soomaaliya|Book]]
-* {{icon|Category}} [[:Category:Soomaaliya|Category]]
-* {{icon|Portal}} [[Portal:Soomaaliya|Portal]]
-| below =
-}}<noinclude>
-
-{{collapsible option |default=expanded}}
 [[Category:Macluumaadka Soomaaliya]]
-[[Category:Soomaaliya| ]]
+[[Category:Soomaaliya|Soomaaliya]]
 </noinclude>
