*Empty MediaWiki Message*

--- a/Sheekh,_Somaliland.mw
+++ b/Sheekh,_Somaliland.mw
@@ -6,7 +6,7 @@
 | settlement_type                 = Magaalo
 | motto                           =
 | image_skyline                   = Saaxil.jpg
-| imagesize                       =
+| imagesize                       = 300px
 | image_caption                   = Buuraha udhexeeya magaalada Sheekh iyo [[Berbera]].
 | image_flag                      =
 | flag_size                       =
