*Empty MediaWiki Message*

--- a/SAABAAN_(_Shirkad_).mw
+++ b/SAABAAN_(_Shirkad_).mw
@@ -1,6 +1,6 @@
 {{Infobox company 
 | name             = SAABAAN ([[Shirkad]])
-| logo             = [[File:SAABAAN Logo.svg|thumb]]
+| logo             = [[File:SAABAAN Logo.svg|350px|thumb]]
 | caption          = SAABAAN	
 | foundation       = {{start date |2014}}
 | location         = [[Muqdisho]], [[Soomaaliya]]
