--- a/Nayjeeriya.mw
+++ b/Nayjeeriya.mw
@@ -136,9 +136,10 @@ Nigeria (oo ku saabsan dhawaaqa maqalka)), asal ahaan waa Jamhuuriyadda Federaal
 Nigeria waxay ku taalla dhowr dal oo boqortooyo ah iyo qabaa'illo qabaa'il ah oo ka soo jeeda millennia. Dalkan casriga ahi wuxuu ka soo jeedaa xukunka Britishka ee gumeysiga ee qarnigii 19aad, waxaana la wareegay qaabka xudduudaha hadda jira ee la jaan qaadaya Koontada Koonfureed ee Nigeria iyo ilaalinta Waqooyiga Nigeria sannadkii 1914. Britain waxay dejisay qaab dhismeed iyo sharci sharci ah iyada oo ku dhaqma sharciyada aan tooska ahayn iyada oo loo marayo madaxda dhaqameedyada . Nigeria waxay noqotay koox madax-bannaan oo madaxbannaan sanadkii 1960-kii. Waxaa soo maray dagaallo sokeeye laga soo bilaabo 1967-kii illaa 1970-kii. Kadibna waxaa is bedelay dawladaha dimoqraadiga ah ee doorashooyinka iyo kali-talisyada militariga illaa ay gaadhay dimoqraadiyad xasilloon sannadkii 1999-kii, iyada oo doorashadii madaxweynenimada ee 2011-ka la tixgeliyey markii ugu horeysay ee si macquul ah xor ah oo cadaalad ah. [7]
 Nigeria waxaa badanaa lagu magacaabaa "Giant Africa", iyada oo ku xiran dadkeeda iyo dhaqaalaheeda. [8] 186 milyan oo qof, Nigeria waa dalka ugu badan ee ku yaal Afrika iyo kan toddobaad ee ugu dad weyn adduunka. Dalka Nigeria wuxuu ku nool yahay adduunka saddexaad ee ugu weyn adduunka, ka dib Hindiya iyo Shiinaha, iyada oo in ka badan 90 milyan oo ka mid ah dadka ay da'doodu ka yar tahay 18 jir [9] [10] Waddanka waxaa loo arkaa inuu yahay waddan caalami ah iyada oo ay ku noolyihiin in ka badan 500 kooxood, kuwaas oo saddexda ugu weyn ay ka mid yihiin Hausa, Igbo iyo Yoruba; kooxdan qowmiyadeed waxay ku hadlaan in ka badan 500 luqadood oo kala duwan oo lagu aqoonsado dhaqamo kala duwan. Luuqadda rasmiga ah waa Ingiriis. Nigeria waxaa loo kala qaybiyaa qiyaastii kala bar Masiixiyiinta, kuwaas oo inta badan ku nool qaybta koonfureed ee dalka, iyo Muslimiinta, oo inta badan ku nool waqooyiga. Dad tiro yar oo ka mid ah dadku waxay ku dhaqmaan diimaha asaliga ah ee Nigeria, sida kuwa ku dhaqan Igbo iyo Yoruba.
 [[w:yo:nigeria]]
+[[File:Map of the Cross River languages.svg|thumb|550px|]]
 
 
-* [[Lagos]], Abidjan, Maiduguri, Nollywood
+*[[Lagos]], Abidjan, Maiduguri, Nollywood
 * 1.[[Abia]] 
 * 2.[[Adamawa]] 
 * 3.[[Akwa Ibom]] 
