/* Muuqaalka */ better image

--- a/Kaban.mw
+++ b/Kaban.mw
@@ -61,13 +61,12 @@ Si ka duwan gitaarka, kabanku wuxuu leeyahay 10 xadhig kuwaasi iskula socdo si m
 179 Museu de la Música, el Bosc.jpg
 Ouds, chessboards, hookahs, and a guitar (Akko Market, 2009).jpg
 Azerbaijani musical instrument ud in Heydar Aliyev Center.jpg
-Christian and Muslim playing ouds Catinas de Santa Maria by king Alfonso X.jpg
+European and Islamic musicians in 13th century playing stringed instruments.jpg
 Egyptian embassy display oud drums doumbek.jpg
 Luth'ud cor.jpg
 Little world, Aichi prefecture - Turkish culture exhibition - Oud.jpg
 
 </gallery>
-
 
 =Qoraalo La Xidhiidha=
 *[[gitaar]]
