--- a/Boosaaso.mw
+++ b/Boosaaso.mw
@@ -87,6 +87,8 @@ Magaalada Boosaaso waxay leedahay mid ka mida Afarta dekedood ee Soomaaliya, Sid
 
 [[File:Bosaso_port.jpg|thumb|Dekada Boosaaso]]
 Sidoo kale [[Dekada Boosaaso|Dekedda Boosaaso]] waxay u adeegtaa umadda Soomaaliyeed, Dekadani waxay ka mid tahay kuwa ugu weyn uguna mashquulka badan Soomaaliya. Warbixin ay sii daysay Idaacada BBC waxaa lagu sheegay in Dekeda Boosaaso tahay tan koowaad ee xoolaha Soomaalida laga dhoofiyo.
+==Juquraafi==
+Boosaaso waxay ku taal waqooyi-bari Soomaaliya, xeebta Gacanka Cadan. Degsiimooyinka u dhaw waxaa ka mid ah Bariga Rehiss (3.5 km ama 2.5 mayl), waqooyi-bari [[Mareero]] (14 km ama 8.5 mayl), galbeedka [[Baalade]] (3.5 km ama 2 mayl), koonfurta-galbeed Laas Geel (16.5 km ama 10 mayl) ), dhanka koonfurta Laas deero (20.5 km ama 13 mayl), iyo koonfurta bari  [[Gaaca]] (36 km ama 22.5 mayl).  Magaalooyinka ugu waaweyn dalka ee u dhow Bosaso waxaa ka mid ah [[Ceerigaabo]] (212 km ama 132 mayl), [[Burco]] (442 km ama 275 mayl), iyo Berbera (465 km ama 289 mayl). [[Shimbiris]], oo ah meesha ugu sarreysa ee Soomaaliya, wuxuu ku yaal ilaa 220 km (140 mayl) dhanka koonfur-galbeed ee buurta [[Cal Madow]].
 
 ==Maamulka Magaalada==
 Arimaha maamul waxaa gacanta ku haya Dowladda Hoose ee magaalada. Guddoomiyaha degmada ahna gudoomiyaha golaha deegaanka waxaa soo doorta Xubnaha golaha deegaanka oo ka kooban 29 xubnood. Maamulka magaalada haatan waxaa hogaansha Cabdisalaam Bashiir Cabdisalaam oo golaha deegaanku si wada jira u doorteen 2015
