*Empty MediaWiki Message*

--- a/Xeebta_Foolmaroodi.mw
+++ b/Xeebta_Foolmaroodi.mw
@@ -12,8 +12,8 @@
 |Dawladda                       = &nbsp;
 |darajo_hogaamiye1             =  [[Madaxweyneyaasha Xeebta Foolmaroodi|Madaxweyne]]
 |darajo_hogaamiye2             =  [[Ra'iisul wasaare]] 
-|magac_hogaamiye1              = [[Laurent Gbagbo]]
-|magac_hogaamiye2              = [[Guillaume Soro]]
+|magac_hogaamiye1              = [[Alassane Ouattara]]
+|magac_hogaamiye2              = 
 |sovereignty_type              = 
 |sovereignty_note              = 
 |established_event1            = 
