*Empty MediaWiki Message*

--- a/Caynaba.mw
+++ b/Caynaba.mw
@@ -67,7 +67,7 @@ waana magaalo qadiimi ah waxa kuyaal ceelka caynaba oo Somaliland oo dhan
 ka caana waa gobol shidaal leh iyo macdan]]
 
 ==Qabiilka degan==
-'''Caynaba''' waa magaalo qadiim ah waxaana degga Beesha [[Dhulbahante]], gaar ahaan Muuse Abokor. Sida 
+'''Caynaba''' waa magaalo qadiim ah waxaana degga Beesha [[Habarjeclo]], gaar ahaan Muuse Abokor. Sida 
 * [[jamacaiyaad]]
 [[Cali barre]] [[idarays muuse]]
 [[Biciide]] [[maxamed barre]] [[cumar jibriil]] iyo [[solomadow]]
