--- a/Macluumaadka_Teknolojiyadda.mw
+++ b/Macluumaadka_Teknolojiyadda.mw
@@ -11,7 +11,8 @@
 == Booqo ==
 * <ref name="Explanation">Information Technology is also known as '''Information and Communication(s) Technology''' ('''ICT''') and '''Infocomm''' in Asia.</ref> 
 * [[w:IT Systems Increasing Employee Productivity|IT Systems Increasing Employee Productivity]]
-* [[w:Modular Audio Recognition Framework|Modular Audio Recognition Framework]] / [[w:MARF|MARF]] ([[w:Modular Audio Recognition Framework|(en)]],[[w:Modular Audio Recognition|Modular Audio Recognition Framework|(de)]],[[w:Modular Audio Recognition Framework|Modular Audio Recognition Framework|(es)]]
+* 
+* [[w:Modular Audio Recognition Framework|tion Framework]] / [[w:MARF|MARF]] ([[w:Modular Audio Recognition Framework|(en)]],[[w:Modular Audio Recognition|Modular Audio Recognition Framework|(de)]],[[w:Modular Audio Recognition Framework|Modular Audio Recognition Framework|(es)]]
 
 === Xogta ===
 
