*Empty MediaWiki Message*

--- a/Macluumaadka_Teknolojiyadda.mw
+++ b/Macluumaadka_Teknolojiyadda.mw
@@ -4,20 +4,14 @@
 
 '''Macluumaadka Teknolojiyadda''' iyadoo kooban ('''IT '''(Information Technology Si gaar ah oo ballaaran waxay ku howl leedahay [[Farsamo|farsamada]] iyo waxyaabaha ku xeeran haqabtirka macluumaadka maamulidiisa, gaar ahaan hay'adaha waaweyn.
 
-
 == Qoraalo ku saabsan Macluumaadka Teknolojiyadda ==
 * [[w:Telematics|Telematics]]  [[w:Information and Communications Technology|Information and Communications Technology]]
 
 == Booqo ==
 * <ref name="Explanation">Information Technology is also known as '''Information and Communication(s) Technology''' ('''ICT''') and '''Infocomm''' in Asia.</ref> 
 * [[w:IT Systems Increasing Employee Productivity|IT Systems Increasing Employee Productivity]]
-* 
 * [[w:Modular Audio Recognition Framework|tion Framework]] / [[w:MARF|MARF]] ([[w:Modular Audio Recognition Framework|(en)]],[[w:Modular Audio Recognition|Modular Audio Recognition Framework|(de)]],[[w:Modular Audio Recognition Framework|Modular Audio Recognition Framework|(es)]]
 
 === Xogta ===
 
-
-
-
-[[Category:Macluumaadka
- Teknolojiyadda]]
+[[Category:Macluumaadka Teknolojiyadda]]
