/* Magacyada jasiiradaha qaar */

--- a/Jasiiradaha_Jubbada_Hoose.mw
+++ b/Jasiiradaha_Jubbada_Hoose.mw
@@ -2,19 +2,18 @@
 {{Gumud}}
 
 == Magacyada jasiiradaha qaar ==
-* jasiirada sacadadiin (waxa ayku talaa meel ujirta 15 km magaalada saylac ee waqoyinka somaliland)
+* jasiirada Sacadadiin (waxa ayku talaa meel ujirta 15 km magaalada saylac ee waqoyiga Soomaaliya)
 * [[Buurgabo]]
 *Istanbuul
-* [[Jawaay]]
-* [[Juula]]
-* [[Kalbiyow]]
-* [[Koyoma]]
-* [[Kudhaa]]
-* [[Kufaaye]]
-* [[Madhawa]]
-* [[raaskambooni]]
-* [[fuuma]]
-*  [Jawaay]
+* [Jawaay]
+* [Juula]
+* [Kalbiyow]
+* [Koyoma]
+* [Kudhaa]
+* [Kufaaye]
+* [Madhawa]
+* [raaskambooni]
+* [fuuma]
 
 == Tixraac ==
 
